--- a/index.ejs
+++ b/index.ejs
@@ -6,9 +6,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <div class="content">
-        <h1>Webpack Boilerplate</h1>
-        <h3>Replace this page with your own code</h3>
-    </div>
+    <canvas id="the-canvas" height="600" width="800"></canvas>
 </body>
 </html>
